Kubernetes/analytics-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service-clusterip
  namespace: analytics-service
spec:
  selector:
    app: analytics-service
  type: ClusterIP
  ports:
  - port: 8005
    targetPort: 8005
